Update PRvalidation.yml of test branch

--- a/.github/workflows/PRvalidation.yml
+++ b/.github/workflows/PRvalidation.yml
@@ -8,4 +8,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print PR Details
-        run: echo "A new PR has been created!"
+        run: echo "A new PR has been created finally!"
